--- a/dashboard.html
+++ b/dashboard.html
@@ -14,7 +14,7 @@
     <div id="wrapper">
         <nav class="navbar navbar-dark align-items-start sidebar sidebar-dark accordion p-0 navbar-bg">
             <div class="container-fluid d-flex flex-column p-0">
-                <a class="" href="#">
+                <a class="" href="dashboard.html">
                     <div class="navbar-logo"><img src="assets/img/logo_maranatha_white.png"></div>
                 </a>
                 <hr class="sidebar-divider my-0">
@@ -23,7 +23,7 @@
                                 class="fas fa-tachometer-alt"></i><span>Dashboard</span></a></li>
                     <li class="nav-item" role="presentation"><a class="nav-link" href="profile.html"><i
                                 class="fas fa-user"></i><span>Data Diri</span></a></li>
-                    <li class="nav-item" role="presentation"><a class="nav-link" href="daftar_baru.html"><i
+                    <li class="nav-item" role="presentation"><a class="nav-link" href="daftar-baru.html"><i
                                 class="fas fa-user-plus"></i><span>Daftar Baru</span></a></li>
                 </ul>
                 <div class="text-center d-none d-md-inline"><button class="btn rounded-circle border-0"
@@ -64,7 +64,7 @@
                     </div>
                     <div class="row mb-3">
                         <div class="col-xs-12 col-sm-4 col-md-4 col-lg-3 col-xl-2">
-                            <a class="btn btn-primary btn-add-admission" role="button" href="daftar_baru.html">
+                            <a class="btn btn-primary btn-add-admission" role="button" href="daftar-baru.html">
                                 <i class="fas fa-plus-circle fa-sm text-white-50"></i>&nbsp;Daftar Baru</a>
                         </div>
                     </div>
@@ -76,25 +76,25 @@
                                 <div class="card-body">
                                     <div class="row align-items-center no-gutters">
                                         <div class="col">
-                                            <label for="">No Peserta</label>
-                                            <div class="text-dark font-weight-bold mb-1 ">
+                                            <label for="" class="label-adm">No Peserta</label>
+                                            <div class="text-dark font-weight-bold mb-1">
                                                 2020010830
                                             </div>
 
-                                            <label for="">Periode</label>
-                                            <div class=" text-dark font-weight-bold mb-1 admission-id">
-                                                <div><b>UTBK 20/21</b>, Tahun Akademik 2020/2021</div>
+                                            <label for="" class="label-adm">Periode</label>
+                                            <div class=" text-dark font-weight-bold mb-1">
+                                                <div>UTBK 20/21, Tahun Akademik 2020/2021</div>
                                             </div>
 
-                                            <label for="">Status</label>
+                                            <label for="" class="label-adm">Status</label>
                                             <div class="text-dark font-weight-bold mb-1">
                                                 <div><span class=" badge-status">Silahkan memilih program
                                                         studi.</span> </div>
                                             </div>
 
-                                            <label for="">Tanggal Daftar</label>
+                                            <label for="" class="label-adm">Tanggal Daftar</label>
                                             <div class="text-dark font-weight-bold mb-1">
-                                                <i class="fa fa-calendar"></i> &nbsp; Jumat, 14 Agustus 2020,
+                                                <i class="far fa-calendar-alt"></i> &nbsp; Jumat, 14 Agustus 2020,
                                                 16:37:36
                                             </div>
 
@@ -117,32 +117,31 @@
                             </div>
                         </div>
                     </div>
-
                     <div class="row mb-2">
                         <div class="col-12">
                             <div class="card shadow card-border-left py-2">
                                 <div class="card-body">
                                     <div class="row align-items-center no-gutters">
                                         <div class="col">
-                                            <label for="">No Peserta</label>
-                                            <div class="text-dark font-weight-bold mb-1 ">
+                                            <label for="" class="label-adm">No Peserta</label>
+                                            <div class="text-dark font-weight-bold mb-1">
                                                 2020010830
                                             </div>
 
-                                            <label for="">Periode</label>
-                                            <div class=" text-dark font-weight-bold mb-1 admission-id">
-                                                <div><b>UTBK 20/21</b>, Tahun Akademik 2020/2021</div>
+                                            <label for="" class="label-adm">Periode</label>
+                                            <div class=" text-dark font-weight-bold mb-1">
+                                                <div>UTBK 20/21, Tahun Akademik 2020/2021</div>
                                             </div>
 
-                                            <label for="">Status</label>
+                                            <label for="" class="label-adm">Status</label>
                                             <div class="text-dark font-weight-bold mb-1">
                                                 <div><span class=" badge-status">Silahkan memilih program
                                                         studi.</span> </div>
                                             </div>
 
-                                            <label for="">Tanggal Daftar</label>
+                                            <label for="" class="label-adm">Tanggal Daftar</label>
                                             <div class="text-dark font-weight-bold mb-1">
-                                                <i class="fa fa-calendar"></i> &nbsp; Jumat, 14 Agustus 2020,
+                                                <i class="far fa-calendar-alt"></i> &nbsp; Jumat, 14 Agustus 2020,
                                                 16:37:36
                                             </div>
 
@@ -165,32 +164,31 @@
                             </div>
                         </div>
                     </div>
-
                     <div class="row mb-2">
                         <div class="col-12">
                             <div class="card shadow card-border-left py-2">
                                 <div class="card-body">
                                     <div class="row align-items-center no-gutters">
                                         <div class="col">
-                                            <label for="">No Peserta</label>
-                                            <div class="text-dark font-weight-bold mb-1 ">
+                                            <label for="" class="label-adm">No Peserta</label>
+                                            <div class="text-dark font-weight-bold mb-1">
                                                 2020010830
                                             </div>
 
-                                            <label for="">Periode</label>
-                                            <div class=" text-dark font-weight-bold mb-1 admission-id">
-                                                <div><b>UTBK 20/21</b>, Tahun Akademik 2020/2021</div>
+                                            <label for="" class="label-adm">Periode</label>
+                                            <div class=" text-dark font-weight-bold mb-1">
+                                                <div>UTBK 20/21, Tahun Akademik 2020/2021</div>
                                             </div>
 
-                                            <label for="">Status</label>
+                                            <label for="" class="label-adm">Status</label>
                                             <div class="text-dark font-weight-bold mb-1">
                                                 <div><span class=" badge-status">Silahkan memilih program
                                                         studi.</span> </div>
                                             </div>
 
-                                            <label for="">Tanggal Daftar</label>
+                                            <label for="" class="label-adm">Tanggal Daftar</label>
                                             <div class="text-dark font-weight-bold mb-1">
-                                                <i class="fa fa-calendar"></i> &nbsp; Jumat, 14 Agustus 2020,
+                                                <i class="far fa-calendar-alt"></i> &nbsp; Jumat, 14 Agustus 2020,
                                                 16:37:36
                                             </div>
 
@@ -213,6 +211,10 @@
                             </div>
                         </div>
                     </div>
+
+                    
+
+                    
 
 
                 </div>
