--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
-    <title>pmb_maranatha_login</title>
+    <title>Login - MCU</title>
     <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
     <!-- <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Nunito+Sans"> -->
     <link rel="stylesheet" href="assets/css/loginStyles.css">
@@ -16,7 +16,7 @@
         <!-- NAVBAR -->
         <nav class="navbar sticky-top navbar-bs">
             <div class="container">
-                <a class="navbar-brand" href="#">
+                <a class="navbar-brand" href="dashboard.html">
                     <img src="assets/img/logo_maranatha.png" width="150" alt="">
                 </a>
             </div>
