--- a/jalur-tes.html
+++ b/jalur-tes.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
-    <title>Dashboard - MCU</title>
+    <title>Jalur Non Tes - MCU</title>
     <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="assets/fonts/fontawesome-all.min.css">
     <link rel="stylesheet" href="assets/css/style.css">
@@ -14,7 +14,7 @@
     <div id="wrapper">
         <nav class="navbar navbar-dark align-items-start sidebar sidebar-dark accordion p-0 navbar-bg">
             <div class="container-fluid d-flex flex-column p-0">
-                <a class="" href="#">
+                <a class="" href="dashboard.html">
                     <div class="navbar-logo"><img src="assets/img/logo_maranatha_white.png"></div>
                 </a>
                 <hr class="sidebar-divider my-0">
@@ -23,7 +23,7 @@
                                 class="fas fa-tachometer-alt"></i><span>Dashboard</span></a></li>
                     <li class="nav-item" role="presentation"><a class="nav-link" href="profile.html"><i
                                 class="fas fa-user"></i><span>Data Diri</span></a></li>
-                    <li class="nav-item" role="presentation"><a class="nav-link active" href="daftar_baru.html"><i
+                    <li class="nav-item" role="presentation"><a class="nav-link active" href="daftar-baru.html"><i
                                 class="fas fa-user-plus"></i><span>Daftar Baru</span></a></li>
                 </ul>
                 <div class="text-center d-none d-md-inline"><button class="btn rounded-circle border-0"
@@ -60,33 +60,35 @@
                 </nav>
                 <div class="container-fluid">
                     <div class="d-sm-flex justify-content-between align-items-center mb-4">
-                        <h3 class="text-dark mb-0">Pilih Strata Akademik</h3>
+                        <h3 class="text-dark mb-0">Pilih Tes</h3>
                     </div>
                     <div class="row">
-                        <div class="col-12">
-                            <div class="card bg-strata-1 shadow card-strata mb-3">
-                                <a href="jalur.html">
-                                    <div class="card-body text-white text-center">
-                                        <i class="fa fa-graduation-cap fa-3x"></i>
-                                        <h4>D3 / S1</h4>
-                                        <h6 class="m-0">Diploma atau Sarjana</h6>
-                                    </div>
-                                </a>
-                            </div>
-                        </div>
-                        <div class="col-12">
-                            <div class="card bg-strata-2 shadow card-strata">
+                        <div class="col-xs-12 col-sm-12 col-md-6">
+                            <div class="card bg-cyan shadow card-strata mb-3">
                                 <a href="">
                                     <div class="card-body text-white text-center">
                                         <i class="fa fa-graduation-cap fa-3x"></i>
-                                        <h4>S2</h4>
-                                        <h6 class="m-0">Magister</h6>
+                                        <h4 class="m-0">Regular Test (Smart Payment)</h4>
                                     </div>
                                 </a>
                             </div>
                         </div>
+                        <div class="col-xs-12 col-sm-12 col-md-6">
+                            <div class="card bg-cyan shadow card-strata mb-3">
+                                <a href="">
+                                    <div class="card-body text-white text-center">
+                                        <i class="fa fa-graduation-cap fa-3x"></i>
+                                        <h4 class="m-0">Regular Test (Smart Saving)</h4>
+                                    </div>
+                                </a>
+                            </div>
+                        </div>   
                     </div>
-
+                    <div class="row">
+                        <div class="col-12">
+                            <a href="jalur.html" class="btn btn-blue btn-sm">Kembali</a>
+                        </div>
+                    </div>
                 </div>
             </div>
             <footer class="bg-white sticky-footer">
