--- a/jalur.html
+++ b/jalur.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
-    <title>Dashboard - MCU</title>
+    <title>Jalur - MCU</title>
     <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="assets/fonts/fontawesome-all.min.css">
     <link rel="stylesheet" href="assets/css/style.css">
@@ -14,7 +14,7 @@
     <div id="wrapper">
         <nav class="navbar navbar-dark align-items-start sidebar sidebar-dark accordion p-0 navbar-bg">
             <div class="container-fluid d-flex flex-column p-0">
-                <a class="" href="#">
+                <a class="" href="dashboard.html">
                     <div class="navbar-logo"><img src="assets/img/logo_maranatha_white.png"></div>
                 </a>
                 <hr class="sidebar-divider my-0">
@@ -23,7 +23,7 @@
                                 class="fas fa-tachometer-alt"></i><span>Dashboard</span></a></li>
                     <li class="nav-item" role="presentation"><a class="nav-link" href="profile.html"><i
                                 class="fas fa-user"></i><span>Data Diri</span></a></li>
-                    <li class="nav-item" role="presentation"><a class="nav-link active" href="daftar_baru.html"><i
+                    <li class="nav-item" role="presentation"><a class="nav-link active" href="daftar-baru.html"><i
                                 class="fas fa-user-plus"></i><span>Daftar Baru</span></a></li>
                 </ul>
                 <div class="text-center d-none d-md-inline"><button class="btn rounded-circle border-0"
@@ -75,7 +75,7 @@
                         </div>
                         <div class="col-12">
                             <div class="card bg-jalur-2 shadow card-strata">
-                                <a href="">
+                                <a href="jalur-tes.html">
                                     <div class="card-body text-white text-center">
                                         <i class="fa fa-desktop fa-3x mb-2"></i>
                                         <h4 class="m-0">Jalur Tes</h4>
@@ -84,7 +84,11 @@
                             </div>
                         </div>
                     </div>
-
+                    <div class="row mt-3">
+                        <div class="col-12">
+                            <a href="tahun-akademik.html" class="btn btn-blue btn-sm">Kembali</a>
+                        </div>
+                    </div>
                 </div>
             </div>
             <footer class="bg-white sticky-footer">
