--- a/tahun-akademik.html
+++ b/tahun-akademik.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
-    <title>Jalur Non Tes - MCU</title>
+    <title>Jalur - MCU</title>
     <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="assets/fonts/fontawesome-all.min.css">
     <link rel="stylesheet" href="assets/css/style.css">
@@ -60,83 +60,35 @@
                 </nav>
                 <div class="container-fluid">
                     <div class="d-sm-flex justify-content-between align-items-center mb-4">
-                        <h3 class="text-dark mb-0">Pilih Non Tes</h3>
-                    </div>
-                    <div class="row">
-                        <div class="col-xs-12 col-sm-12 col-md-6">
-                            <div class="card bg-cyan shadow card-strata mb-3">
-                                <a href="">
-                                    <div class="card-body text-white text-center">
-                                        <i class="fa fa-graduation-cap fa-3x"></i>
-                                        <h4 class="m-0">Beasiswa Akademik</h4>
-                                    </div>
-                                </a>
-                            </div>
-                        </div>
-                        <div class="col-xs-12 col-sm-12 col-md-6">
-                            <div class="card bg-cyan shadow card-strata mb-3">
-                                <a href="">
-                                    <div class="card-body text-white text-center">
-                                        <i class="fa fa-graduation-cap fa-3x"></i>  
-                                        <h4 class="m-0">Beasiswa Non Akademik</h4>
-                                    </div>
-                                </a>
-                            </div>
-                        </div>
-                        <div class="col-xs-12 col-sm-12 col-md-6">
-                            <div class="card bg-cyan shadow card-strata mb-3">
-                                <a href="">
-                                    <div class="card-body text-white text-center">
-                                        <i class="fa fa-graduation-cap fa-3x"></i>  
-                                        <h4 class="m-0">Beasiswa OSC MEDCOM</h4>
-                                    </div>
-                                </a>
-                            </div>
-                        </div>
-                        <div class="col-xs-12 col-sm-12 col-md-6">
-                            <div class="card bg-cyan shadow card-strata mb-3">
-                                <a href="">
-                                    <div class="card-body text-white text-center">
-                                        <i class="fa fa-graduation-cap fa-3x"></i>  
-                                        <h4 class="m-0">Beasiswa Maranatha Peduli</h4>
-                                    </div>
-                                </a>
-                            </div>
-                        </div>
-                        <div class="col-xs-12 col-sm-12 col-md-6">
-                            <div class="card bg-cyan shadow card-strata mb-3">
-                                <a href="">
-                                    <div class="card-body text-white text-center">
-                                        <i class="fa fa-graduation-cap fa-3x"></i>  
-                                        <h4 class="m-0">Beasiswa Mitra Sekolah dan Gereja</h4>
-                                    </div>
-                                </a>
-                            </div>
-                        </div>
-                        <div class="col-xs-12 col-sm-12 col-md-6">
-                            <div class="card bg-cyan shadow card-strata mb-3">
-                                <a href="">
-                                    <div class="card-body text-white text-center">
-                                        <i class="fa fa-graduation-cap fa-3x"></i>  
-                                        <h4 class="m-0">Program Fast Track (Akselerasi)</h4>
-                                    </div>
-                                </a>
-                            </div>
-                        </div>
-                        <div class="col-xs-12 col-sm-12 col-md-6">
-                            <div class="card bg-cyan shadow card-strata mb-3">
-                                <a href="">
-                                    <div class="card-body text-white text-center">
-                                        <i class="fa fa-graduation-cap fa-3x"></i>  
-                                        <h4 class="m-0">UTBK</h4>
-                                    </div>
-                                </a>
-                            </div>
-                        </div>
+                        <h3 class="text-dark mb-0">Pilih Tahun Akademik</h3>
                     </div>
                     <div class="row">
                         <div class="col-12">
-                            <a href="jalur.html" class="btn btn-blue btn-sm">Kembali</a>
+                            <div class="card bg-cyan shadow card-strata mb-3">
+                                <a href="jalur.html">
+                                    <div class="card-body text-white text-center">
+                                        <i class="fa fa-graduation-cap fa-3x mb-2"></i>
+                                        <h4>Tahun Akademik 2021/2022</h4>
+                                        <h6>Angkatan 2021</h6>
+                                    </div>
+                                </a>
+                            </div>
+                        </div>
+                        <div class="col-12">
+                            <div class="card bg-cyan shadow card-strata">
+                                <a href="jalur.html">
+                                    <div class="card-body text-white text-center">
+                                        <i class="fa fa-graduation-cap fa-3x mb-2"></i>
+                                        <h4>Tahun Akademik 2022/2023</h4>
+                                        <h6>Angkatan 2022</h6>
+                                    </div>
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="row mt-3">
+                        <div class="col-12">
+                            <a href="daftar-baru.html" class="btn btn-blue btn-sm">Kembali</a>
                         </div>
                     </div>
                 </div>
