updated profile nav-tabs

--- a/profile.html
+++ b/profile.html
@@ -74,9 +74,9 @@
                         </div>
 
                         <!-- TAB -->
-                        <div class="container-fluid">
+                        <div class="container-fluid mb-3">
                             <ul id="rowTab" class="nav nav-tabs justify-content-center">
-                                <li class="nav-item active">
+                                <li class="nav-item">
                                     <a class="nav-link active" href="#data_diri" data-toggle="tab">Data Diri</a>
                                 </li>
                                 <li class="nav-item">
