added program studi page

--- a/program-studi.html
+++ b/program-studi.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
-    <title>Jalur Non Tes - MCU</title>
+    <title>Program Studi - MCU</title>
     <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="assets/fonts/fontawesome-all.min.css">
     <link rel="stylesheet" href="assets/css/style.css">
@@ -60,83 +60,48 @@
                 </nav>
                 <div class="container-fluid">
                     <div class="d-sm-flex justify-content-between align-items-center mb-4">
-                        <h3 class="text-dark mb-0">Pilih Non Tes</h3>
+                        <h3 class="text-dark mb-0">Pilih Program Studi</h3>
                     </div>
                     <div class="row">
-                        <div class="col-xs-12 col-sm-12 col-md-6">
-                            <div class="card bg-cyan shadow card-strata mb-3">
-                                <a href="program-studi.html">
-                                    <div class="card-body text-white text-center">
-                                        <i class="fa fa-graduation-cap fa-3x"></i>
-                                        <h4 class="m-0">Beasiswa Akademik</h4>
-                                    </div>
-                                </a>
-                            </div>
-                        </div>
-                        <div class="col-xs-12 col-sm-12 col-md-6">
-                            <div class="card bg-cyan shadow card-strata mb-3">
-                                <a href="">
-                                    <div class="card-body text-white text-center">
-                                        <i class="fa fa-graduation-cap fa-3x"></i>  
-                                        <h4 class="m-0">Beasiswa Non Akademik</h4>
-                                    </div>
-                                </a>
-                            </div>
-                        </div>
-                        <div class="col-xs-12 col-sm-12 col-md-6">
-                            <div class="card bg-cyan shadow card-strata mb-3">
-                                <a href="">
-                                    <div class="card-body text-white text-center">
-                                        <i class="fa fa-graduation-cap fa-3x"></i>  
-                                        <h4 class="m-0">Beasiswa OSC MEDCOM</h4>
-                                    </div>
-                                </a>
-                            </div>
-                        </div>
-                        <div class="col-xs-12 col-sm-12 col-md-6">
-                            <div class="card bg-cyan shadow card-strata mb-3">
-                                <a href="">
-                                    <div class="card-body text-white text-center">
-                                        <i class="fa fa-graduation-cap fa-3x"></i>  
-                                        <h4 class="m-0">Beasiswa Maranatha Peduli</h4>
-                                    </div>
-                                </a>
-                            </div>
-                        </div>
-                        <div class="col-xs-12 col-sm-12 col-md-6">
-                            <div class="card bg-cyan shadow card-strata mb-3">
-                                <a href="">
-                                    <div class="card-body text-white text-center">
-                                        <i class="fa fa-graduation-cap fa-3x"></i>  
-                                        <h4 class="m-0">Beasiswa Mitra Sekolah dan Gereja</h4>
-                                    </div>
-                                </a>
-                            </div>
-                        </div>
-                        <div class="col-xs-12 col-sm-12 col-md-6">
-                            <div class="card bg-cyan shadow card-strata mb-3">
-                                <a href="">
-                                    <div class="card-body text-white text-center">
-                                        <i class="fa fa-graduation-cap fa-3x"></i>  
-                                        <h4 class="m-0">Program Fast Track (Akselerasi)</h4>
-                                    </div>
-                                </a>
-                            </div>
-                        </div>
-                        <div class="col-xs-12 col-sm-12 col-md-6">
-                            <div class="card bg-cyan shadow card-strata mb-3">
-                                <a href="">
-                                    <div class="card-body text-white text-center">
-                                        <i class="fa fa-graduation-cap fa-3x"></i>  
-                                        <h4 class="m-0">UTBK</h4>
-                                    </div>
-                                </a>
+                        <div class="col">
+                            <div class="card shadow">
+                                <div class="card-body">
+                                    <form>
+                                        <div class="form-group">
+                                            <label for="religion"><strong>Program Studi Pilihan 1</strong></label>
+                                            <select class="form-control" id="exampleFormControlSelect1">
+                                                <option>Program Studi S-1 Pendidikan Dokter</option>
+                                                <option>Program Studi S-1 Desain Komunikasi Visual</option>
+                                                <option>Program Studi S-1 Teknik Informatika</option>
+                                            </select>
+                                        </div>
+
+                                        <div class="form-group">
+                                            <label for="religion"><strong>Sumbangan Sukarela 1</strong></label>
+                                            <div class="input-group">
+                                                <div class="input-group-prepend">
+                                                    <span class="input-group-text" id="basic-addon1">Rp</span>
+                                                </div>
+                                                <input type="text" class="form-control" aria-describedby="basic-addon1">
+                                            </div>
+                                            <label for=""><i>(Berlaku kelipatan Rp 5000000)</i></label>
+                                        </div>
+
+
+                                        <div class="col-12 text-center">
+                                            <a class="btn btn-secondary btn-sm" href="">Tambah Pilihan 2</a>
+                                        </div>
+                                        <div class="form-group">
+                                            <button class="btn btn-bg-blue btn-sm" type="submit">Submit</button>
+                                        </div>
+                                    </form>
+                                </div>
                             </div>
                         </div>
                     </div>
-                    <div class="row">
+                    <div class="row mt-3">
                         <div class="col-12">
-                            <a href="jalur.html" class="btn btn-blue btn-sm">Kembali</a>
+                            <a href="daftar-baru.html" class="btn btn-blue btn-sm">Kembali</a>
                         </div>
                     </div>
                 </div>
