--- a/program-studi.html
+++ b/program-studi.html
@@ -66,35 +66,36 @@
                         <div class="col">
                             <div class="card shadow">
                                 <div class="card-body">
-                                    <form>
-                                        <div class="form-group">
-                                            <label for="religion"><strong>Program Studi Pilihan 1</strong></label>
-                                            <select class="form-control" id="exampleFormControlSelect1">
-                                                <option>Program Studi S-1 Pendidikan Dokter</option>
-                                                <option>Program Studi S-1 Desain Komunikasi Visual</option>
-                                                <option>Program Studi S-1 Teknik Informatika</option>
-                                            </select>
-                                        </div>
+                                    <!-- <form> -->
+                                    <div class="form-group">
+                                        <label for="religion"><strong>Program Studi Pilihan 1</strong></label>
+                                        <select class="form-control" id="exampleFormControlSelect1">
+                                            <option>Program Studi S-1 Pendidikan Dokter</option>
+                                            <option>Program Studi S-1 Desain Komunikasi Visual</option>
+                                            <option>Program Studi S-1 Teknik Informatika</option>
+                                        </select>
+                                    </div>
 
-                                        <div class="form-group">
-                                            <label for="religion"><strong>Sumbangan Sukarela 1</strong></label>
-                                            <div class="input-group">
-                                                <div class="input-group-prepend">
-                                                    <span class="input-group-text" id="basic-addon1">Rp</span>
-                                                </div>
-                                                <input type="text" class="form-control" aria-describedby="basic-addon1">
+                                    <div class="form-group">
+                                        <label for="religion"><strong>Sumbangan Sukarela 1</strong></label>
+                                        <div class="input-group">
+                                            <div class="input-group-prepend">
+                                                <span class="input-group-text" id="basic-addon1">Rp</span>
                                             </div>
-                                            <label for=""><i>(Berlaku kelipatan Rp 5000000)</i></label>
+                                            <input type="text" class="form-control" aria-describedby="basic-addon1">
                                         </div>
+                                        <label for=""><i>(Berlaku kelipatan Rp 5000000)</i></label>
+                                    </div>
 
+                                    <div class="col-12 text-center">
+                                        <a class="btn btn-secondary btn-sm" href="">Tambah Pilihan 2</a>
+                                    </div>
 
-                                        <div class="col-12 text-center">
-                                            <a class="btn btn-secondary btn-sm" href="">Tambah Pilihan 2</a>
-                                        </div>
-                                        <div class="form-group">
-                                            <button class="btn btn-bg-blue btn-sm" type="submit">Submit</button>
-                                        </div>
-                                    </form>
+                                    <div class="form-group">
+                                        <button class="btn btn-bg-blue btn-sm"
+                                            onclick="location.href='nilai.html'">Submit</button>
+                                    </div>
+                                    <!-- </form> -->
                                 </div>
                             </div>
                         </div>
