--- a/nilai.html
+++ b/nilai.html
@@ -174,6 +174,118 @@
                             </div>
                         </div>
                     </div>
+                    <div class="row">
+                        <div class="col-12">
+                            <div class="card shadow mb-4">
+                                <!-- Card Header - Accordion -->
+                                <a href="#collapseCardExample2" class="d-block card-header py-3" data-toggle="collapse"
+                                    role="button" aria-expanded="true" aria-controls="collapseCardExample2">
+                                    <h6 class="m-0 font-weight-bold text-primary">Nilai Mata Pelajaran</h6>
+                                </a>
+                                <!-- Card Content - Collapse -->
+                                <div class="collapse show" id="collapseCardExample2" style="">
+                                    <div class="card-body">
+                                        <div class="table-responsive-xl">
+                                            <table class="table table-bordered">
+                                                <thead>
+                                                    <tr>
+                                                        <th class="text-nowrap text-danger" colspan="4">
+                                                            *<i>Mohon konversi
+                                                                nilai rapor ke dalam bentuk angka skala 1 -
+                                                                100.</i>
+                                                        </th>
+                                                    </tr>
+                                                    <tr>
+                                                        <th style="width: 16%" scope="col">Kelas</th>
+                                                        <th class="text-nowrap" style="width: 28%" scope="col">Total
+                                                            Nilai</th>
+                                                        <th class="text-nowrap" style="width: 28%" scope="col">Jumlah
+                                                            Pelajaran</th>
+                                                        <th class="text-nowrap" style="width: 28%" scope="col">Rata-Rata
+                                                        </th>
+                                                    </tr>
+                                                </thead>
+                                                <tbody>
+                                                    <tr>
+                                                        <th scope="row">X (Ganjil)</th>
+                                                        <td>
+                                                            <div class="form-group">
+                                                                <input class="form-control" type="text">
+                                                            </div>
+                                                        </td>
+                                                        <td>
+                                                            <div class="form-group">
+                                                                <input class="form-control" type="text">
+                                                            </div>
+                                                        </td>
+                                                        <td>
+                                                            <div class="form-group">
+                                                                <input class="form-control" type="text">
+                                                            </div>
+                                                        </td>
+                                                    </tr>
+                                                    <tr>
+                                                        <th scope="row">X (Genap)</th>
+                                                        <td>
+                                                            <div class="form-group">
+                                                                <input class="form-control" type="text">
+                                                            </div>
+                                                        </td>
+                                                        <td>
+                                                            <div class="form-group">
+                                                                <input class="form-control" type="text">
+                                                            </div>
+                                                        </td>
+                                                        <td>
+                                                            <div class="form-group">
+                                                                <input class="form-control" type="text">
+                                                            </div>
+                                                        </td>
+                                                    </tr>
+                                                    <tr>
+                                                        <th scope="row">XI (Ganjil)</th>
+                                                        <td>
+                                                            <div class="form-group">
+                                                                <input class="form-control" type="text">
+                                                            </div>
+                                                        </td>
+                                                        <td>
+                                                            <div class="form-group">
+                                                                <input class="form-control" type="text">
+                                                            </div>
+                                                        </td>
+                                                        <td>
+                                                            <div class="form-group">
+                                                                <input class="form-control" type="text">
+                                                            </div>
+                                                        </td>
+                                                    </tr>
+                                                    <tr>
+                                                        <th scope="row">XI (Genap)</th>
+                                                        <td>
+                                                            <div class="form-group">
+                                                                <input class="form-control" type="text">
+                                                            </div>
+                                                        </td>
+                                                        <td>
+                                                            <div class="form-group">
+                                                                <input class="form-control" type="text">
+                                                            </div>
+                                                        </td>
+                                                        <td>
+                                                            <div class="form-group">
+                                                                <input class="form-control" type="text">
+                                                            </div>
+                                                        </td>
+                                                    </tr>
+                                                </tbody>
+                                            </table>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                     <div class="row mt-3">
                         <div class="col-12">
                             <a href="dashboard.html" class="btn btn-blue btn-sm">Kembali</a>
