updated nilai page

--- a/program-studi.html
+++ b/program-studi.html
@@ -90,13 +90,16 @@
                                     <div class="col-12 text-center">
                                         <a class="btn btn-secondary btn-sm" href="">Tambah Pilihan 2</a>
                                     </div>
-
-                                    <div class="form-group">
-                                        <button class="btn btn-bg-blue btn-sm"
-                                            onclick="location.href='nilai.html'">Submit</button>
-                                    </div>
                                     <!-- </form> -->
                                 </div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="row mt-3">
+                        <div class="col-12">
+                            <div class="form-group">
+                                <button class="btn btn-bg-blue btn-sm" onclick="location.href='nilai.html'">Submit</button>
                             </div>
                         </div>
                     </div>
