--- a/jalur-nontes.html
+++ b/jalur-nontes.html
@@ -134,7 +134,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="row">
+                    <div class="row mb-3">
                         <div class="col-12">
                             <a href="jalur.html" class="btn btn-blue btn-sm">Kembali</a>
                         </div>
