--- a/nilai.html
+++ b/nilai.html
@@ -514,7 +514,7 @@
                     </div>
                     <div class="row">
                         <div class="col-12">
-                            <div class="card shadow">
+                            <div class="card shadow mb-4">
                                 <!-- Card Header - Accordion -->
                                 <a href="#collapseCardExample3" class="d-block card-header py-3" data-toggle="collapse"
                                     role="button" aria-expanded="true" aria-controls="collapseCardExample3">
@@ -576,15 +576,16 @@
                             </div>
                         </div>
                     </div>
-                    <div class="row mt-3">
+                    <div class="row mb-3">
                         <div class="col-12">
                             <div class="form-group">
-                                <button class="btn btn-bg-blue btn-sm" onclick="location.href=''">Simpan Data</button>
+                                <button class="btn btn-bg-blue btn-sm" onclick="location.href='persyaratan.html'">Simpan
+                                    Data</button>
                             </div>
                         </div>
                     </div>
 
-                    <div class="row mt-3">
+                    <div class="row mb-3">
                         <div class="col-12">
                             <a href="dashboard.html" class="btn btn-blue btn-sm">Kembali</a>
                         </div>
