--- a/persyaratan.html
+++ b/persyaratan.html
@@ -211,7 +211,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="row">
+                    <div class="row mb-3">
                         <div class="col-12">
                             <a href="dashboard.html" class="btn btn-blue btn-sm">Kembali</a>
                         </div>
