updated login page

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
         <!-- CONTENT -->
         <div class="container-fluid padding container-card-login-form">
-            <div class="container">
+            <div class="container p-0">
                 <div class="row padding">
                     <div class="col-xs-12 col-sm-6 col-info">
                         <div class="info-description">
@@ -50,7 +50,10 @@
                     <div class="col-xs-12 col-sm-6 col-form">
                         <div class="container-col-form">
                             <div class="text-center">
-                                <p class="form-title">DAFTAR ONLINE</p>
+                                <p class="form-title">Penerimaan Mahasiswa Baru</p>
+                                <p class="text-dark form-text">Belum punya akun?
+                                    <a class="text-primary form-link" href="">Daftar disini.</a>
+                                </p>
                             </div>
                             <hr>
                             <div class="form-group">
@@ -66,10 +69,8 @@
                                     onclick="location.href='dashboard.html'">LOGIN</button>
                             </div>
                             <hr>
-                            <div class="text-center">
+                            <div class="text-center text-forgot-pass">
                                 <a href="">FORGOT PASSWORD</a>
-                                <br>
-                                <a href="">REGISTER</a>
                             </div>
                         </div>
                     </div>
