updated login page

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                             <div class="text-center">
                                 <p class="form-title">Penerimaan Mahasiswa Baru</p>
                                 <p class="text-dark form-text">Belum punya akun?
-                                    <a class="text-primary form-link" href="">Daftar disini.</a>
+                                    <a class="form-link" href="">Daftar disini.</a>
                                 </p>
                             </div>
                             <hr>
