removed unused script

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
     <title>Login - MCU</title>
     <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
-    <link rel="stylesheet" href="assets/css/loginStyles.css">
+    <link rel="stylesheet" href="assets/css/login-styles.css">
 </head>
 
 <body class="bg-gradient">
