--- a/nilai.html
+++ b/nilai.html
@@ -71,7 +71,7 @@
                                     <h6 class="m-0 font-weight-bold text-primary">Nilai Rata-Rata Rapor</h6>
                                 </a>
                                 <!-- Card Content - Collapse -->
-                                <div class="collapse show" id="collapseCardExample" style="">
+                                <div class="collapse show" id="collapseCardExample">
                                     <div class="card-body">
                                         <div class="table-responsive-xl">
                                             <table class="table table-bordered">
@@ -183,7 +183,7 @@
                                     <h6 class="m-0 font-weight-bold text-primary">Nilai Mata Pelajaran</h6>
                                 </a>
                                 <!-- Card Content - Collapse -->
-                                <div class="collapse show" id="collapseCardExample2" style="">
+                                <div class="collapse show" id="collapseCardExample2">
                                     <div class="card-body">
                                         <div class="table-responsive-xl">
                                             <table class="table table-bordered">
@@ -521,7 +521,7 @@
                                     <h6 class="m-0 font-weight-bold text-primary">Prestasi</h6>
                                 </a>
                                 <!-- Card Content - Collapse -->
-                                <div class="collapse show" id="collapseCardExample3" style="">
+                                <div class="collapse show" id="collapseCardExample3">
                                     <div class="card-body">
                                         <div class="col-12 m-auto">
                                             <p class="text-danger font-weight-bold colspan=" 9">
@@ -602,8 +602,8 @@
 
     <script src="assets/js/jquery.min.js"></script>
     <script src="assets/bootstrap/js/bootstrap.min.js"></script>
-    <script src="assets/js/chart.min.js"></script>
-    <script src="assets/js/bs-init.js"></script>
+    <!-- <script src="assets/js/chart.min.js"></script> -->
+    <!-- <script src="assets/js/bs-init.js"></script> -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.4.1/jquery.easing.js"></script>
     <script src="assets/js/theme.js"></script>
 
