--- a/profile.html
+++ b/profile.html
@@ -365,16 +365,11 @@
                                 </div>
                             </div>
                         </div>
-
-
                     </div>
-
                 </div>
             </div>
 
-
-
-
+            <!-- FOOTER -->
             <footer class="bg-white sticky-footer">
                 <div class="container my-auto">
                     <div class="text-center my-auto copyright"><span>Copyright © MCU 2020</span></div>
@@ -385,12 +380,11 @@
 
     <script src="assets/js/jquery.min.js"></script>
     <script src="assets/bootstrap/js/bootstrap.min.js"></script>
-    <script src="assets/js/chart.min.js"></script>
-    <script src="assets/js/bs-init.js"></script>
+    <!-- <script src="assets/js/chart.min.js"></script> -->
+    <!-- <script src="assets/js/bs-init.js"></script> -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.4.1/jquery.easing.js"></script>
     <script src="assets/js/theme.js"></script>
     <script src="assets/js/bootstrap-datepicker.js"></script>
-
     <script type="text/javascript">
         $(function () {
             $('#datepicker').datepicker({
@@ -400,7 +394,6 @@
             });
         });
     </script>
-
     <script type="text/javascript">
         $(function () {
             $('#datepicker2').datepicker({
@@ -418,7 +411,6 @@
             $('#rowTab a:first').tab('show');
         });    
     </script> -->
-
 
 </body>
 
