added register and forgot password page

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                         <div class="text-center">
                             <p class="form-title">Penerimaan Mahasiswa Baru</p>
                             <p class="text-dark form-text">Belum punya akun?
-                                <a class="form-link" href="">Daftar disini.</a>
+                                <a class="form-link" href="register.html">Daftar disini.</a>
                             </p>
                         </div>
                         <hr>
@@ -67,7 +67,7 @@
                         </div>
                         <hr>
                         <div class="text-center text-forgot-pass">
-                            <a href="">FORGOT PASSWORD</a>
+                            <a href="forgot-password.html">FORGOT PASSWORD</a>
                         </div>
                     </div>
                 </div>
