updated register and forgot password title

--- a/forgot-password.html
+++ b/forgot-password.html
@@ -26,7 +26,7 @@
                 <div class="col-12 col-form">
                     <div class="container-col-form">
                         <div class="text-center">
-                            <p class="form-title">Penerimaan Mahasiswa Baru</p>
+                            <p class="form-title">Reset Password</p>
                         </div>
                         <hr>
                         <div class="form-group">
