updated btn info

--- a/index.html
+++ b/index.html
@@ -41,7 +41,8 @@
                                 <img class="d-block w-100" src="assets/img/banner_pmb2.jpg" alt="Second slide">
                             </div>
                         </div>
-                        <a class="btn btn-info btn-sm" href="http://www.maranatha.edu/admission/">INFO</a>
+                        <a target="_blank" rel="noopener noreferrer" class="btn btn-info btn-sm"
+                            href="http://www.maranatha.edu/admission/">INFO</a>
                     </div>
                 </div>
                 <div class="col-xs-12 col-sm-6 col-form">
