--- a/dashboard.html
+++ b/dashboard.html
@@ -65,7 +65,7 @@
                                         <a class="dropdown-item" role="presentation" href="profile.html">
                                             <i class="fas fa-user fa-sm fa-fw mr-2 text-gray-400"></i>&nbsp;Profile
                                         </a>
-                                        <a class="dropdown-item" role="presentation" href="#">
+                                        <a class="dropdown-item" role="presentation" href="ubah-password.html">
                                             <i class="fas fa-key fa-sm fa-fw mr-2 text-gray-400"></i>&nbsp;Ubah Password
                                         </a>
                                         <div class="dropdown-divider"></div>
