--- a/profile.html
+++ b/profile.html
@@ -16,43 +16,64 @@
         <nav class="navbar navbar-dark align-items-start sidebar sidebar-dark accordion p-0 navbar-bg">
             <div class="container-fluid d-flex flex-column p-0">
                 <a class="" href="dashboard.html">
-                    <div class="navbar-logo"><img src="assets/img/logo_maranatha_white.png"></div>
+                    <div class="navbar-logo">
+                        <img src="assets/img/logo_maranatha_white.png">
+                    </div>
                 </a>
                 <hr class="sidebar-divider my-0">
                 <ul class="nav navbar-nav text-light" id="accordionSidebar">
-                    <li class="nav-item" role="presentation"><a class="nav-link" href="dashboard.html"><i
-                                class="fas fa-tachometer-alt"></i><span>Dashboard</span></a></li>
-                    <li class="nav-item" role="presentation"><a class="nav-link active" href="profile.html"><i
-                                class="fas fa-user"></i><span>Data Diri</span></a></li>
-                    <li class="nav-item" role="presentation"><a class="nav-link" href="daftar-baru.html"><i
-                                class="fas fa-user-plus"></i><span>Daftar Baru</span></a></li>
+                    <li class="nav-item" role="presentation">
+                        <a class="nav-link" href="dashboard.html">
+                            <i class="fas fa-tachometer-alt"></i>
+                            <span>Dashboard</span>
+                        </a>
+                    </li>
+                    <li class="nav-item" role="presentation">
+                        <a class="nav-link active" href="profile.html">
+                            <i class="fas fa-user"></i>
+                            <span>Data Diri</span>
+                        </a>
+                    </li>
+                    <li class="nav-item" role="presentation">
+                        <a class="nav-link" href="daftar-baru.html">
+                            <i class="fas fa-user-plus"></i>
+                            <span>Daftar Baru</span>
+                        </a>
+                    </li>
                 </ul>
-                <div class="text-center d-none d-md-inline"><button class="btn rounded-circle border-0"
-                        id="sidebarToggle" type="button"></button></div>
+                <div class="text-center d-none d-md-inline">
+                    <button class="btn rounded-circle border-0" id="sidebarToggle" type="button"></button>
+                </div>
             </div>
         </nav>
         <div class="d-flex flex-column" id="content-wrapper">
             <div id="content">
                 <nav class="navbar navbar-light navbar-expand bg-white shadow mb-4 topbar static-top">
-                    <div class="container-fluid"><button class="btn btn-link d-md-none rounded-circle mr-3"
-                            id="sidebarToggleTop" type="button"><i class="fas fa-bars"></i></button>
+                    <div class="container-fluid">
+                        <button class="btn btn-link d-md-none rounded-circle mr-3" id="sidebarToggleTop" type="button">
+                            <i class="fas fa-bars"></i>
+                        </button>
                         <ul class="nav navbar-nav flex-nowrap ml-auto">
-
                             <li class="nav-item dropdown no-arrow" role="presentation">
-                                <div class="nav-item dropdown no-arrow"><a class="dropdown-toggle nav-link"
-                                        data-toggle="dropdown" aria-expanded="false" href="#"><span
-                                            class="d-none d-lg-inline mr-2 text-gray-600 small">Rintarou
-                                            Okabe</span><img class="border rounded-circle img-profile"
-                                            src="assets/img/avatar2.jpg"></a>
+                                <div class="nav-item dropdown no-arrow">
+                                    <a class="dropdown-toggle nav-link" data-toggle="dropdown" aria-expanded="false"
+                                        href="#">
+                                        <span class="d-none d-lg-inline mr-2 text-gray-600 small">
+                                            Rintarou Okabe</span>
+                                        <img class="border rounded-circle img-profile" src="assets/img/avatar2.jpg">
+                                    </a>
                                     <div class="dropdown-menu shadow dropdown-menu-right animated--grow-in" role="menu">
-                                        <a class="dropdown-item" role="presentation" href="profile.html"><i
-                                                class="fas fa-user fa-sm fa-fw mr-2 text-gray-400"></i>&nbsp;Profile</a><a
-                                            class="dropdown-item" role="presentation" href="#"><i
-                                                class="fas fa-key fa-sm fa-fw mr-2 text-gray-400"></i>&nbsp;Ubah
-                                            Password</a>
-                                        <div class="dropdown-divider"></div><a class="dropdown-item" role="presentation"
-                                            href="index.html"><i
-                                                class="fas fa-sign-out-alt fa-sm fa-fw mr-2 text-gray-400"></i>&nbsp;Logout</a>
+                                        <a class="dropdown-item" role="presentation" href="profile.html">
+                                            <i class="fas fa-user fa-sm fa-fw mr-2 text-gray-400"></i>&nbsp;Profile
+                                        </a>
+                                        <a class="dropdown-item" role="presentation" href="ubah-password.html">
+                                            <i class="fas fa-key fa-sm fa-fw mr-2 text-gray-400"></i>&nbsp;Ubah Password
+                                        </a>
+                                        <div class="dropdown-divider"></div>
+                                        <a class="dropdown-item" role="presentation" href="index.html">
+                                            <i class="fas fa-sign-out-alt fa-sm fa-fw mr-2 text-gray-400"></i>
+                                            &nbsp;Logout
+                                        </a>
                                     </div>
                                 </div>
                             </li>
