--- a/ubah-password.html
+++ b/ubah-password.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
-    <title>Jalur Tes - MCU</title>
+    <title>Ubah Password - MCU</title>
     <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="assets/fonts/fontawesome-all.min.css">
     <link rel="stylesheet" href="assets/css/style.css">
@@ -15,34 +15,19 @@
         <nav class="navbar navbar-dark align-items-start sidebar sidebar-dark accordion p-0 navbar-bg">
             <div class="container-fluid d-flex flex-column p-0">
                 <a class="" href="dashboard.html">
-                    <div class="navbar-logo">
-                        <img src="assets/img/logo_maranatha_white.png">
-                    </div>
+                    <div class="navbar-logo"><img src="assets/img/logo_maranatha_white.png"></div>
                 </a>
                 <hr class="sidebar-divider my-0">
                 <ul class="nav navbar-nav text-light" id="accordionSidebar">
-                    <li class="nav-item" role="presentation">
-                        <a class="nav-link" href="dashboard.html">
-                            <i class="fas fa-tachometer-alt"></i>
-                            <span>Dashboard</span>
-                        </a>
-                    </li>
-                    <li class="nav-item" role="presentation">
-                        <a class="nav-link" href="profile.html">
-                            <i class="fas fa-user"></i>
-                            <span>Data Diri</span>
-                        </a>
-                    </li>
-                    <li class="nav-item" role="presentation">
-                        <a class="nav-link active" href="daftar-baru.html">
-                            <i class="fas fa-user-plus"></i>
-                            <span>Daftar Baru</span>
-                        </a>
-                    </li>
+                    <li class="nav-item" role="presentation"><a class="nav-link" href="dashboard.html"><i
+                                class="fas fa-tachometer-alt"></i><span>Dashboard</span></a></li>
+                    <li class="nav-item" role="presentation"><a class="nav-link" href="profile.html"><i
+                                class="fas fa-user"></i><span>Data Diri</span></a></li>
+                    <li class="nav-item" role="presentation"><a class="nav-link" href="daftar-baru.html"><i
+                                class="fas fa-user-plus"></i><span>Daftar Baru</span></a></li>
                 </ul>
-                <div class="text-center d-none d-md-inline">
-                    <button class="btn rounded-circle border-0" id="sidebarToggle" type="button"></button>
-                </div>
+                <div class="text-center d-none d-md-inline"><button class="btn rounded-circle border-0"
+                        id="sidebarToggle" type="button"></button></div>
             </div>
         </nav>
         <div class="d-flex flex-column" id="content-wrapper">
@@ -81,33 +66,42 @@
                 </nav>
                 <div class="container-fluid">
                     <div class="d-sm-flex justify-content-between align-items-center mb-4">
-                        <h3 class="text-dark mb-0">Pilih Tes</h3>
+                        <h3 class="text-dark mb-0">Ubah Password</h3>
                     </div>
-                    <div class="row">
-                        <div class="col-xs-12 col-sm-12 col-md-6">
-                            <div class="card bg-cyan shadow card-strata mb-3">
-                                <a href="">
-                                    <div class="card-body text-white text-center">
-                                        <i class="fa fa-graduation-cap fa-3x"></i>
-                                        <h4 class="m-0">Regular Test (Smart Payment)</h4>
+                    <div class="row mb-3">
+                        <div class="col">
+                            <div class="card shadow">
+                                <div class="card-body">
+                                    <!-- <form> -->
+                                    <div class="form-group">
+                                        <label for="password"><strong>Password Lama</strong></label>
+                                        <input class="form-control" type="password" name="password">
                                     </div>
-                                </a>
+
+                                    <div class="form-group">
+                                        <label for="password"><strong>Password Baru</strong></label>
+                                        <input class="form-control" type="password" name="password">
+                                    </div>
+
+                                    <div class="form-group">
+                                        <label for="password"><strong>Konfirmasi Password Baru</strong></label>
+                                        <input class="form-control" type="password" name="password">
+                                    </div>
+                                    <!-- </form> -->
+                                </div>
                             </div>
                         </div>
-                        <div class="col-xs-12 col-sm-12 col-md-6">
-                            <div class="card bg-cyan shadow card-strata mb-3">
-                                <a href="">
-                                    <div class="card-body text-white text-center">
-                                        <i class="fa fa-graduation-cap fa-3x"></i>
-                                        <h4 class="m-0">Regular Test (Smart Saving)</h4>
-                                    </div>
-                                </a>
-                            </div>
-                        </div>   
                     </div>
-                    <div class="row">
+                    <div class="row mb-3">
                         <div class="col-12">
-                            <a href="jalur.html" class="btn btn-blue btn-sm">Kembali</a>
+                            <div class="form-group">
+                                <button class="btn btn-bg-blue btn-sm" onclick="location.href=''">Submit</button>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="row mb-3">
+                        <div class="col-12">
+                            <a href="dashboard.html" class="btn btn-blue btn-sm">Kembali</a>
                         </div>
                     </div>
                 </div>
