--- a/nilai.html
+++ b/nilai.html
@@ -89,7 +89,7 @@
                                 <!-- Card Header - Accordion -->
                                 <a href="#collapseCardExample" class="d-block card-header py-3" data-toggle="collapse"
                                     role="button" aria-expanded="true" aria-controls="collapseCardExample">
-                                    <h6 class="m-0 font-weight-bold text-primary">Nilai Rata-Rata Rapor</h6>
+                                    <h6 class="m-0 font-weight-bold text-blue">Nilai Rata-Rata Rapor</h6>
                                 </a>
                                 <!-- Card Content - Collapse -->
                                 <div class="collapse show" id="collapseCardExample">
@@ -201,7 +201,7 @@
                                 <!-- Card Header - Accordion -->
                                 <a href="#collapseCardExample2" class="d-block card-header py-3" data-toggle="collapse"
                                     role="button" aria-expanded="true" aria-controls="collapseCardExample2">
-                                    <h6 class="m-0 font-weight-bold text-primary">Nilai Mata Pelajaran</h6>
+                                    <h6 class="m-0 font-weight-bold text-blue">Nilai Mata Pelajaran</h6>
                                 </a>
                                 <!-- Card Content - Collapse -->
                                 <div class="collapse show" id="collapseCardExample2">
@@ -539,7 +539,7 @@
                                 <!-- Card Header - Accordion -->
                                 <a href="#collapseCardExample3" class="d-block card-header py-3" data-toggle="collapse"
                                     role="button" aria-expanded="true" aria-controls="collapseCardExample3">
-                                    <h6 class="m-0 font-weight-bold text-primary">Prestasi</h6>
+                                    <h6 class="m-0 font-weight-bold text-blue">Prestasi</h6>
                                 </a>
                                 <!-- Card Content - Collapse -->
                                 <div class="collapse show" id="collapseCardExample3">
