--- a/dashboard.html
+++ b/dashboard.html
@@ -85,7 +85,7 @@
                     </div>
                     <div class="row mb-3">
                         <div class="col-xs-12 col-sm-4 col-md-4 col-lg-3 col-xl-2">
-                            <a class="btn btn-primary btn-add-admission" role="button" href="daftar-baru.html">
+                            <a class="btn btn-add-admission" href="daftar-baru.html">
                                 <i class="fas fa-plus-circle fa-sm text-white-50"></i>&nbsp;Daftar Baru
                             </a>
                         </div>
