--- a/forgot-password.html
+++ b/forgot-password.html
@@ -35,7 +35,7 @@
                         </div>
 
                         <div class="form-group">
-                            <button class="btn btn-primary btn-block btn-login"
+                            <button class="btn btn-bg-blue btn-block btn-login"
                                 onclick="location.href='dashboard.html'">RESET</button>
                         </div>
                         <hr>
