--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                                 <img class="d-block w-100" src="assets/img/banner_pmb2.jpg" alt="Second slide">
                             </div>
                         </div>
-                        <a target="_blank" rel="noopener noreferrer" class="btn btn-info btn-sm"
+                        <a target="_blank" rel="noopener noreferrer" class="btn btn-informasi btn-sm"
                             href="http://www.maranatha.edu/admission/">INFO</a>
                     </div>
                 </div>
@@ -63,7 +63,7 @@
                             <input type="password" class="form-control" id="password">
                         </div>
                         <div class="form-group">
-                            <button class="btn btn-primary btn-block btn-login"
+                            <button class="btn btn-bg-blue btn-block btn-login"
                                 onclick="location.href='dashboard.html'">LOGIN</button>
                         </div>
                         <hr>
