--- a/ubah-password.html
+++ b/ubah-password.html
@@ -17,7 +17,9 @@
                 <a class="" href="dashboard.html">
                     <div class="navbar-logo"><img src="assets/img/logo_maranatha_white.png"></div>
                 </a>
-                <hr class="sidebar-divider my-0">
+                <div class="col-12">
+                    <hr class="sidebar-divider my-0">
+                </div>
                 <ul class="nav navbar-nav text-light" id="accordionSidebar">
                     <li class="nav-item" role="presentation"><a class="nav-link" href="dashboard.html"><i
                                 class="fas fa-tachometer-alt"></i><span>Dashboard</span></a></li>
