--- a/jalur.html
+++ b/jalur.html
@@ -19,7 +19,9 @@
                         <img src="assets/img/logo_maranatha_white.png">
                     </div>
                 </a>
-                <hr class="sidebar-divider my-0">
+                <div class="col-12">
+                    <hr class="sidebar-divider my-0">
+                </div>
                 <ul class="nav navbar-nav text-light" id="accordionSidebar">
                     <li class="nav-item" role="presentation">
                         <a class="nav-link" href="dashboard.html">
