--- a/profile.html
+++ b/profile.html
@@ -43,6 +43,9 @@
                         </a>
                     </li>
                 </ul>
+                <div class="col-12">
+                    <hr class="sidebar-divider">
+                </div>
                 <div class="text-center d-none d-md-inline">
                     <button class="btn rounded-circle border-0" id="sidebarToggle" type="button"></button>
                 </div>
