--- a/ubah-password.html
+++ b/ubah-password.html
@@ -28,6 +28,9 @@
                     <li class="nav-item" role="presentation"><a class="nav-link" href="daftar-baru.html"><i
                                 class="fas fa-user-plus"></i><span>Daftar Baru</span></a></li>
                 </ul>
+                <div class="col-12">
+                    <hr class="sidebar-divider">
+                </div>
                 <div class="text-center d-none d-md-inline"><button class="btn rounded-circle border-0"
                         id="sidebarToggle" type="button"></button></div>
             </div>
